# robotics_class_exercises

./: .gitignore  README.md
ex1_pub_sub/encoder_pubsub/: CMakeLists.txt  README.md  package.xml
ex1_pub_sub/encoder_pubsub/src/encoder_pub_node/: publisher.cpp
ex1_pub_sub/encoder_pubsub/src/encoder_sub_node/: subscriber.cpp
ex1_pub_sub/encoder_pubsub_msgs/: CMakeLists.txt  README.md  package.xml
ex1_pub_sub/encoder_pubsub_msgs/msg/: Reading.msg
ex2_tf/current_tf/: CMakeLists.txt  README.md  package.xml
ex2_tf/current_tf/include/: current_tf_listener.h
ex2_tf/current_tf/src/current_tf_listener/: current_tf_listener.cpp  current_tf_listener_node.cpp
ex2_tf/fanuc_m20ia_description/: CMakeLists.txt  README.md  package.xml
ex2_tf/fanuc_m20ia_description/urdf/: m20ia.urdf
ex2_tf/fanuc_moveit_config/: .setup_assistant  package.xml
ex2_tf/fanuc_moveit_config/config/: fake_controllers.yaml  fanuc_m-20ia.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
ex2_tf/fanuc_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  move_group.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
ex3_kinematics/kinematics/: CMakeLists.txt  README.md  package.xml
ex3_kinematics/kinematics/config/: default.yaml
ex3_kinematics/kinematics/include/: inverse_kinematics_action.h
ex3_kinematics/kinematics/src/action_servers/: ik_action_server.cpp  inverse_kinematics_action.cpp
ex3_kinematics/kinematics/src/forward_kinematics_node/: forward_kinematics.cpp
ex3_kinematics/kinematics/src/inverse_kinematics_node/: inverse_kinematics.cpp
ex3_kinematics/kinematics_msgs/: CMakeLists.txt  README.md  package.xml
ex3_kinematics/kinematics_msgs/action/: InverseKinematics.action
ex3_kinematics/kinematics_msgs/srv/: forward_kinematics.srv
(+1 files in other folders)
