<package>
  <name>fanuc_m20ia_description</name>
  <version>0.1.0</version>

  <description>Visual robot model for Fanuc M-20iA</description>
  <author email="irontux@irontux.null">irontux</author>

  <maintainer email="irontux@irontux.null">irontux</maintainer>

  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  
</package>