<package>
  <name>fanuc_m20ia_description</name>
  <version>0.1.0</version>

  <description>Visual robot model for Fanuc M-20iA</description>
  <author email="f.chiarello1@studenti.unisa.it">Francesco Chiarello</author>

  <maintainer email="f.chiarello1@studenti.unisa.it">Francesco Chiarello</maintainer>

  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  
</package>